--- a/.github/workflows/QA_Deploy.yml
+++ b/.github/workflows/QA_Deploy.yml
@@ -3,11 +3,14 @@ name: Validate PR on QA branch
 
 # Definition when the workflow should run
 on:
-    # The workflow will run whenever an event happens on a pull request
+    # The workflow will run whenever an event happens on a pull request is merged
     push:
+      # The events are that a PR is opened, edited, reopened or when a commit is pushed
+      # to a branch that has an existing pull request
+      types: [opened, edited, reopened, synchronize]
       # The branches filter allows to specify that this workflow should only
       # run if the branch name is "QA". This way we prevent this workflow
-      # from running when PRs are merged
+      # from running when PRs are opened on other branches
       branches: [ QA ]
       # We only care about changes to the force-app directory, which is the
       # root directory of the sfdx project. This prevents the job from running
@@ -48,6 +51,43 @@ jobs:
               uses: actions/checkout@v3
               with:
                 fetch-depth: 0
+            
+            # Now, we need a way to let the developer specify which tests to run, which
+            # could be all tests or just the tests relevant to their deployment.
+
+            # To do this, we can ask the developer to name their test classes in the
+            # body of the PR, using the following syntax
+
+            # Apex::[CommunitiesLoginControllerTest,MyProfilePageControllerTest]::Apex
+            # or Apex::[all]::Apex to run all tests
+
+            # This special delimeter can be added to the PR template so that your 
+            # team doesn't have to remember the syntax. 
+
+            # Once a developer has specified a list of classes to run, we need to be able
+            # to extract this information from the PR, and pass it on the the VM.
+
+            - name: 'Read PR Body'
+              env:
+                # The pull request body is available through the github context object
+                # we put the body of the pull request in an env variable (only available to this step)
+                PR_BODY: ${{github.event.pull_request.body}}
+
+              # Here we print the content of the environment variable and
+              # pipe to a a text file.
+
+              # Then we call the local script parsePR.js, which will create
+              # a new file called testsToRun.txt. This file will have the list
+              # of tests to run separated by a comma
+
+              # Finally, we add the list of tests to the $GITHUB_ENV variable
+              # as this allows us to reference the list in a subsequent step.  If you
+              # were using a normal env variable, its value would not be available outside this step.
+              run: |
+                  echo $PR_BODY > ./pr_body.txt
+                  node ./parsePR.js              
+                  TESTS=$(cat testsToRun.txt)       
+                  echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV
                   
             # Now Install Salesforce CLI
             - name: 'Install Salesforce CLI'
@@ -108,10 +148,18 @@ jobs:
             # If the env variable does not equal 'all', we know that there is a list of
             # tests that can be run
 
-          
+
+            - name: 'Check-only deploy delta changes - Run Specified Tests'
+              if: ${{ env.APEX_TESTS != 'All' }}
+              run: |
+                  echo ${{env.APEX_TESTS}}
+                  sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel RunSpecifiedTests --runtests ${{env.APEX_TESTS}} --json
+             
               # If the env variable equals all, we run No tests
             - name: 'Check-only deploy delta changes - Run No Tests'
-                 run: sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel NoTestRun  --json
+              if: ${{ env.APEX_TESTS == 'All' }}
+              run: |
+                  sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel NoTestRun  --json
                        
             - name: 'Deploy destructive changes (if any)'
               run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings 
