--- a/.github/workflows/QA_Deploy.yml
+++ b/.github/workflows/QA_Deploy.yml
@@ -155,7 +155,7 @@ jobs:
             - name: 'deploy delta changes - Run No Tests'
               if: ${{ env.APEX_TESTS == 'All' }}
               run: |
-                  sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel NoTestRun  --json
+                  sfdx force:source:deploy -p "changed-sources/force-app" --testlevel NoTestRun  --json
                        
             - name: 'Deploy destructive changes (if any)'
-              run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings 
+              run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --ignorewarnings 
